--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-
-
-node/node_modules
-.DS_Store
-
-node/npm-debug.log
-=======
 # Logs
 logs
 *.log
@@ -65,3 +58,10 @@ typings/
 .env
 
 .DS_Store
+
+# Deliverables
+# lib/
+# dist/
+# temp/
+
+.tgz
