--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,49 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
-  "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
-  },
-  "dependencies": {
-    "airtable": "^0.5.10",
-    "firebase-admin": "~7.0.0",
-    "firebase-functions": "^2.2.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1"
-  },
-  "private": true
+    "name": "functions",
+    "description": "Cloud Functions for Firebase",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:alayo/firebase-functions.git"
+    },
+    "files": [
+        "functions/**/*",
+        "docs/*"
+    ],
+    "scripts": {
+        "lint": "eslint .",
+        "serve": "firebase serve --only functions",
+        "shell": "firebase functions:shell",
+        "start": "npm run shell",
+        "deploy": "firebase deploy --only functions",
+        "logs": "firebase functions:log",
+        "build:ts": "tsc",
+        "build": "./node_modules/.bin/tsc",
+        "document": "",
+        "preversion": "",
+        "version": "",
+        "postversion": "",
+        "test": "",
+        "test:coverage": "",
+        "test:local": ""
+    },
+    "dependencies": {
+        "airtable": "^0.5.10",
+        "firebase-admin": "~7.0.0",
+        "firebase-functions": "^2.2.0"
+    },
+    "devDependencies": {
+        "eslint": "^5.12.0",
+        "eslint-plugin-promise": "^4.0.1"
+    },
+    "private": true,
+    "contributors": [
+        {
+            "name": "Walid Newaz",
+            "email": "mdwalid@gmail.com"
+        },
+        {
+            "name": "Shawn Brinkman",
+            "email": "shawn.brinkman@alayo.io"
+        }
+    ]
 }
